# polyequal

./: Cargo.toml  LICENSE
src/: lib.rs  polyequal.rs
tools/: index_equal.html
